public/v/release-4.2/_sources/repositories_and_packages/isaac_ros_compression/isaac_ros_h264_encoder/index.rst.txt
==============
|package_name|
==============

:ir_github:`<isaac_ros_compression> <isaac_ros_h264_encoder>`

Quickstart
----------

Set Up Development Environment
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. include:: /_snippets/set_up_dev_env.rst

Download Quickstart Assets
^^^^^^^^^^^^^^^^^^^^^^^^^^

#. Download quickstart data from NGC:

   :ir_assets:`<isaac_ros_h264_encoder> <quickstart.tar.gz>`

Build |package_name|
^^^^^^^^^^^^^^^^^^^^

.. tabs::

   .. tab:: Binary Package

      #. Activate the Isaac ROS environment:

         .. code:: bash

            isaac-ros activate

      #. Install the prebuilt Debian package:

         :ir_apt:

         .. code:: bash

            sudo apt-get install -y ros-:ir_ros_distro:-isaac-ros-h264-encoder

   .. tab:: Build from Source

      #. Install Git LFS:

         .. code:: bash

            sudo apt-get install -y git-lfs && git lfs install

      #. Clone this repository under ``${ISAAC_ROS_WS}/src``:

         .. code:: bash

            cd ${ISAAC_ROS_WS}/src && \
               git clone :ir_clone:`<isaac_ros_compression>`

      #. Activate the Isaac ROS environment:

         .. code:: bash

            isaac-ros activate

      #. Use ``rosdep`` to install the package's dependencies:

         .. code:: bash

            rosdep update && rosdep install --from-paths ${ISAAC_ROS_WS}/src/isaac_ros_compression/isaac_ros_h264_encoder --ignore-src -y

      #. Build the package from source:

         .. code:: bash

            cd ${ISAAC_ROS_WS}/ && \
               colcon build --symlink-install --packages-up-to isaac_ros_h264_encoder --base-paths ${ISAAC_ROS_WS}/src/isaac_ros_compression/isaac_ros_h264_encoder

      #. Source the ROS workspace:

         .. note::

            Make sure to repeat this step in **every** terminal created inside the Isaac ROS environment.

            Because this package was built from source, the enclosing workspace must be sourced for ROS to be able to find the package's contents.

         .. code:: bash

            source install/setup.bash

Run Launch File
^^^^^^^^^^^^^^^

.. tabs::

   .. group-tab:: RealSense Camera

      #. Ensure that you have already set up your RealSense camera using the :doc:`RealSense setup tutorial </getting_started/sensors/realsense_setup>`. If you have not, please set up the sensor and then restart this quickstart from the beginning.

      #. Continuing inside the container, install the following dependencies:

         :ir_apt:

         .. code:: bash

            sudo apt-get install -y ros-:ir_ros_distro:-isaac-ros-examples ros-:ir_ros_distro:-isaac-ros-realsense

      #. Run the launch file. This launch file launches the example with the RealSense camera:

         .. code:: bash

            ros2 launch isaac_ros_examples isaac_ros_examples.launch.py launch_fragments:=realsense_stereo_rect,stereo_h264_encoder

   .. group-tab:: ZED Camera

      #. Ensure that you have already set up your ZED camera using :doc:`ZED setup tutorial </getting_started/sensors/zed_setup>`.

      #. Continuing inside the Isaac ROS environment, install dependencies:

         :ir_apt:

         .. code:: bash

            sudo apt-get install -y ros-:ir_ros_distro:-isaac-ros-examples ros-:ir_ros_distro:-isaac-ros-stereo-image-proc ros-:ir_ros_distro:-isaac-ros-zed

      #. Run the following launch file to spin up a demo of this package using a ZED Camera:

         .. code:: bash

            ros2 launch isaac_ros_examples isaac_ros_examples.launch.py \
            launch_fragments:=zed_stereo_rect,stereo_h264_encoder \
            interface_specs_file:=${ISAAC_ROS_WS}/isaac_ros_assets/isaac_ros_h264_encoder/zed2_quickstart_interface_specs.json

         .. note::

            If you are using the `ZED X` series, replace  `zed2_quickstart_interface_specs.json` with `zedx_quickstart_interface_specs.json` in the above command.


Visualize Results
^^^^^^^^^^^^^^^^^

.. note::

   Visualization is **optional**. To visualize the encoded output, you need to complete the :ref:`Isaac ROS H264 decoder <repositories_and_packages/isaac_ros_compression/isaac_ros_h264_decoder/index:quickstart>`.

#. Open a **new** terminal and activate the Isaac ROS environment:

   .. code:: bash

      isaac-ros activate

#. Decode the images by running the following command:

   .. code:: bash

      ros2 launch isaac_ros_examples isaac_ros_examples.launch.py launch_fragments:=stereo_h264_decoder

#. Open another terminal, activate the Isaac ROS environment, and install ``rqt_image_view``:

   .. code:: bash

      isaac-ros activate

   .. code:: bash

      sudo apt-get install -y ros-:ir_ros_distro:-rqt-image-view

   .. tabs::
      .. group-tab:: RealSense Camera

         #. To visualize the left image, run:

            .. code:: bash

               ros2 run rqt_image_view rqt_image_view /left/image_uncompressed

         #. To visualize the right image, press ``Ctrl+C`` to stop, then run:

            .. code:: bash

               ros2 run rqt_image_view rqt_image_view /right/image_uncompressed

            For example, the result looks like:

            .. figure:: :ir_lfs:`<resources/isaac_ros_docs/concepts/compression/h264/realsense_example.png>`
               :align: center

      .. group-tab:: ZED Camera

         #. To visualize the left image, run:

            .. code:: bash

               ros2 run rqt_image_view rqt_image_view /left/image_uncompressed

         #. To visualize the right image, press ``Ctrl+C`` to stop, then run:

            .. code:: bash

               ros2 run rqt_image_view rqt_image_view /right/image_uncompressed

Troubleshooting
---------------

H.264 Encode/Decode May Fail on DGX Spark
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Symptom
"""""""

On DGX Spark, the H.264 encoder and decoder nodes may fail to launch with the
following error:

.. code:: bash

   Error: libnvbufsurface.so.1.0.0: cannot open shared object file: No such file or directory

Solution
""""""""

This will be fixed in a future release. As a workaround, set the following
environment variable before launching the node:

.. code:: bash

   export LD_LIBRARY_PATH="/usr/lib/aarch64-linux-gnu/nvidia:${LD_LIBRARY_PATH}"

API
----

ROS Parameters
^^^^^^^^^^^^^^

.. list-table::
   :header-rows: 1

   * - ROS Parameter
     - Type
     - Default
     - Description

   * - ``input_width``
     - ``uint32_t``
     - ``1920``
     - The width of the input image.
   * - ``input_height``
     - ``uint32_t``
     - ``1200``
     - The height of the input image.
   * - ``qp``
     - ``uint32_t``
     - ``20``
     - The encoder constant QP value.
   * - ``hw_preset``
     - ``uint32_t``
     - ``0``
     - The encoder hardware preset type. The value can be an integer from ``0`` to ``3``, representing ``Ultrafast``, ``Fast``, ``Medium`` and, ``Slow``, respectively.
   * - ``profile``
     - ``uint32_t``
     - ``0``
     - The profile to be used for encoding. The value can be an integer from ``0`` to ``2``, representing ``Main``, ``Baseline``, and ``High``, respectively.
   * - ``iframe_interval``
     - ``int32_t``
     - ``5``
     - Interval between two I frames, in number of frames. E.g., ``iframe_interval=5`` represents ``IPPPPI...``, ``iframe_interval=1`` represents I frame only
   * - ``config``
     - ``std::string``
     - ``pframe_cqp``
     - A preset combination of ``qp``, ``hw_preset``, ``profile`` and ``iframe_interval``. The value can be ``iframe_cqp``, ``pframe_cqp`` or ``custom``. When ``iframe_cqp`` or ``pframe_cqp`` is used, the default value of these four parameters will be applied. Only when this field is ``custom`` will the custom values will be used.

ROS Topics Subscribed
^^^^^^^^^^^^^^^^^^^^^

.. list-table::
   :header-rows: 1

   * - ROS Topic
     - Interface
     - Description
   * - ``image_raw``
     - `sensor_msgs/Image <https://github.com/ros2/common_interfaces/blob/:ir_ros_distro:/sensor_msgs/msg/Image.msg>`__
     - Raw input image.

.. warning::

   All input images are required to have height and width that are both an even number of pixels.

ROS Topics Published
^^^^^^^^^^^^^^^^^^^^

.. list-table::
   :header-rows: 1

   * - ROS Topic
     - Interface
     - Description
   * - ``image_compressed``
     - `sensor_msgs/CompressedImage <https://github.com/ros2/common_interfaces/blob/:ir_ros_distro:/sensor_msgs/msg/CompressedImage.msg>`__
     - The H.264 compressed image

Input Restrictions
^^^^^^^^^^^^^^^^^^

#. The input image resolution must be the same as the dimension you
   provided, and the resolution must be **no larger than
   ``1920x1200``**.
#. The input image should be in ``rgb8`` or ``bgr8`` format, and it will
   be converted to ``nv12`` format before being sent to the encoder.

Output Interpretations
^^^^^^^^^^^^^^^^^^^^^^

#. The encoder could perform All-I frame or P-frame encoding and output
   the H.264 compressed data. The input and output are one-to-one
   mapped.

.. |package_name| replace:: ``isaac_ros_h264_encoder``